<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/sparks_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/welcome_to"
            android:layout_marginBottom="20dp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/social_media_integration" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/sparks_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/gmaillogin_button"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/gmail_background_button"
            android:drawableStart="@drawable/search"
            android:gravity="center_horizontal|center_vertical"
            android:paddingHorizontal="5dp"
            android:paddingStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_in_with_google"
            android:textAllCaps="false"
            android:textColor="#808080"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/fblogin_button"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:paddingHorizontal="5dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:drawableStart="@drawable/fb_logo"
            android:text="@string/login_with_facebook"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button"
            android:paddingStart="6dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>
</RelativeLayout>